kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dq-business-data-manager-service
  name: dq-business-data-manager-service
spec:
  ports:
  - name: keycloak
    port: 443
    targetPort: 8081
  - name: dq-business-data-manager
    port: 8080
    targetPort: 8080
  selector:
    name: dq-business-data-manager
