kube/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bdm
spec:
  podSelector:
    matchLabels:
      name: dq-business-data-manager
  ingress:
    - ports:
      - protocol: TCP
        port: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gait-backend
spec:
  podSelector:
    matchLabels:
      name: dq-business-data-manager
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: web
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector:
            matchLabels:
              name: worker
      ports:
        - protocol: TCP
          port: 8080
